--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -1,51 +1,51 @@
 .navBar {
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .topnav-right {
-    float:right;
+  float: right;
 }
 
 .navBar a {
-    color: rgb(3,48,118);
-    text-decoration: none;
-    padding-left: 20px;
+  color: rgb(3, 48, 118);
+  text-decoration: none;
+  padding-left: 20px;
 }
 
 .topnav-right a {
-    padding-left: 50px;
-    padding-right: 20px;
+  padding-left: 50px;
+  padding-right: 20px;
 }
 
 #homepage-logo {
-    max-width: 40px;
-    max-height: 40px;
-    width: auto;
-    height: auto;
+  max-width: 40px;
+  max-height: 40px;
+  width: auto;
+  height: auto;
 }
 
 #urgent-button {
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-bottom: 5px;
-    margin-left: 50px;
-    margin-right: 20px;
-    color:white;
-    background-color: rgb(255, 102, 0);
-    border: 3px solid rgb(3,48,118);
-    border-radius: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  margin-left: 50px;
+  margin-right: 20px;
+  color: white;
+  background-color: rgb(255, 102, 0);
+  border: 3px solid rgb(3, 48, 118);
+  border-radius: 15px;
 }
 
 #urgent-button:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 #homepage-logo:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 .link:hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
