--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -1,20 +1,31 @@
 .navBar {
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+  width: 100%;
+  padding: 10px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 }
 
 .topnav-right {
-    float:right;
+  float: right;
 }
 
 .navBar a {
-    color:navy;
-    text-decoration: none;
-    padding-left: 20px;
+  color: #4e5871;
+  text-decoration: none;
+  padding-left: 20px;
 }
 
 .topnav-right a {
-    padding-left: 50px;
-    padding-right: 20px;
+  padding-left: 50px;
+  padding-right: 20px;
+}
+
+.stats-section {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  width: 100%;
 }
