--- a/src/component/CrimeStats.css
+++ b/src/component/CrimeStats.css
@@ -9,7 +9,7 @@
 
 .chart-description {
   text-align: center;
-  font-size: 2rem; /* Adjust the size as needed */
+  font-size: 2rem;
   margin-bottom: 1rem;
 }
 
