--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -9,7 +9,7 @@
 }
 
 .navBar a {
-    color:navy;
+    color: rgb(3,48,118);
     text-decoration: none;
     padding-left: 20px;
 }
@@ -17,4 +17,35 @@
 .topnav-right a {
     padding-left: 50px;
     padding-right: 20px;
+}
+
+#homepage-logo {
+    max-width: 40px;
+    max-height: 40px;
+    width: auto;
+    height: auto;
+}
+
+#urgent-button {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+    margin-left: 50px;
+    margin-right: 20px;
+    color:white;
+    background-color: rgb(255, 102, 0);
+    border: 3px solid rgb(3,48,118);
+    border-radius: 15px;
+}
+
+#urgent-button:hover {
+    opacity: 0.8;
+}
+
+#homepage-logo:hover {
+    opacity: 0.8;
+}
+
+.link:hover {
+    opacity: 0.8;
 }
