--- a/src/component/CrimeStats.css
+++ b/src/component/CrimeStats.css
@@ -1,6 +1,13 @@
+.App {
+  min-height: 100vh;
+}
+
+.App-header {
+  display:contents;
+}
+
 .title {
   font-size: 2.5rem;
-
   margin-bottom: 1rem;
   text-align: center;
   margin-top: 0;
