--- a/src/App.css
+++ b/src/App.css
@@ -5,20 +5,9 @@
     rgba(255, 189, 132, 0.1),
     rgba(255, 189, 132, 0.79)
   );
-  background-attachment: fixed;
+  background-attachment: fixed;  /* Sets the static gradient background colour */
   margin: 0;
-  font-family: "Itim", Verdana, Arial, sans-serif;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  font-family: "Itim", Verdana, Arial, sans-serif; /* Determines the default font for the app - we opted for a slightly playful, handwritten script, e.g. Mind website */
 }
 
 .App-header {
@@ -29,17 +18,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: rgb(0, 0, 0);
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
