--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -26,7 +26,7 @@
   height: auto;
 }
 
-#urgent-button {
+#urgent-button { /* Different styling so it stands out */
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 5px;
@@ -37,6 +37,8 @@
   border: 3px solid rgb(3, 48, 118);
   border-radius: 15px;
 }
+
+/* Opacity reduced when hovering (lightens the colour) to show the user visual feedback that it's a button */
 
 #urgent-button:hover {
   opacity: 0.8;
