--- a/src/component/Footer.css
+++ b/src/component/Footer.css
@@ -3,7 +3,7 @@
     color: #fff;
     padding: 20px 0;
     width: 100%;
-    position: fixed;       /* Keeping this fixed so it stays at the bottom */
+    position: relative;       /* Keeping this fixed so it stays at the bottom - changed to relative so it remains at the bottom of the page*/
     bottom: 0;             /* Making sure it is aligned at the bottom */
     left: 0;
   }
