--- a/src/component/Home.css
+++ b/src/component/Home.css
@@ -20,7 +20,7 @@ html{
 .home {
   scroll-snap-align: start;
   height: 100vh;
-
+}
 .homeIntro{
   color: rgb(3, 48, 118);
   line-height: 28px;
@@ -39,7 +39,7 @@ html{
   font-size: 24px;
   cursor: pointer;
   z-index: 1000;
-
+}
 #scrollToTop:hover {
   opacity: 0.8;
 }
