--- a/src/component/SafetyTips.css
+++ b/src/component/SafetyTips.css
@@ -6,13 +6,13 @@ color: rgb(3, 48, 118);
 
 .image-grid { /* Setting up the grid for images */
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Define the number of columns (2 in our case) */
+    grid-template-columns: repeat(3, 1fr); /* Define the number of columns (2 in our case) */
     gap: 20px; /* Space between the images */
-    max-width: 650px; /* The width of the grid to prevent images being all over the page */
+    max-width: 975px; /* The width of the grid to prevent images being all over the page */
     margin: 0 auto; /* Center the grid */
 }
 
-.image-container { /* The container area for the images */
+.image { /* The container area for the images */
     position: relative;
     height: 300px;
     padding: 10px;
@@ -20,38 +20,50 @@ color: rgb(3, 48, 118);
     overflow: hidden; /* Making sure the curved edges don't clip */
 }
 
-.image-container img { /* Settings for the images themselves */
+.image img { /* Settings for the images themselves */
     width: 100%;
     height: 100%;
     display: block;
-    border: 2px solid rgb(3, 48, 118); /* Add border to the image */
+    border: 2px solid rgb(238, 146, 88); /* Add border to the image */
     border-radius: 20px; /* Curved edge for the image itself */
     overflow: hidden;
     box-sizing: border-box; /* Making sure the border fits within image set size */
     box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.3); /* Create image shadow */
 }
 
-.image-container .overlay { /* Settings for the hover effect overlay */
+.image .overlay { /* Settings for the hover effect overlay */
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(31, 52, 101, 0.7); /* Hover over color */
+    background-color: rgba(37, 77, 24, 0.7); /* Hover over colour */
     opacity: 0;
     transition: opacity 0.5s ease; /* Hover effect opacity */
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgb(248, 215, 194); /* Color of the text that appears on the hover effect */
+    color: rgb(248, 215, 194); /* Colour of the text that appears on the hover effect */
     font-size: 15px;
     text-align: center;
 }
 
-.image-container .overlay .text {
-    padding-right: 5px; /* Add padding around the text. Only on the right though. Because for some reason it doesn't center otherwise */
+.image .overlay .text {
+    padding: 15px; /* Add padding around the text. */
 }
 
-.image-container:hover .overlay {
+.image:hover .overlay {
     opacity: 1; /* Setting up visibility of the hover effect */
 }
+
+/* Overlay for the illegal items */
+.image.red-overlay .overlay {
+    background-color: rgba(105, 9, 9, 0.7); /* Different colour for images of the illegal items */
+    color: rgb(248, 215, 194); /* Text colour */
+}
+
+/* Style for links within the overlay text */
+.image .overlay .text .overlay-link {
+    color: rgb(238, 146, 88); /* Change to the color you want */
+    text-decoration: underline; /* Optional: Add underline to links */
+  }
