--- a/src/component/Facts.css
+++ b/src/component/Facts.css
@@ -1,10 +1,62 @@
-.facts {
-    display:contents;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 40px;
-    bottom: 20px;
-    width: 100%;
+/* Styles for the main container of the Facts component */
+.factsContainer {
+    text-align: center; 
+    width: 85%;  
+    margin: auto;  
+    color: #00028c;  
+}
+
+/* Styles for the heading within the Facts component */
+h2 {
+    text-decoration: underline;  
+}
+
+/* Styles for the container holding all the facts */
+.allFacts {
+    text-align: center;  
+}
+
+/* Styles for each fact container */
+.factsDiv {
+    margin: auto; 
+    display: flex; 
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;  
+    line-height: 30px;
+}
+
+/* Styles for each fact paragraph */
+.factParagraph {
+    box-shadow: 1px 1px 10px 1px #425eac; 
+    border-radius: 6px;
+    padding: 30px;
+    margin: 40px;
+
+}
+
+/* Media query for screens with a maximum width of 500px */
+@media only screen and (max-width: 500px) {
+    h2 {
+        font-size: 1.5rem; 
+    }
+    .factsContainer {
+        width: 100%;  
+        font-size: 1rem;  
+    }
+}
+
+/* Media query for screens with a maximum width of 350px */
+@media only screen and (max-width: 350px) {
+    h2 {
+        font-size: 1.1rem;  
+    }
+    .factsContainer {
+        font-size: 0.8rem; 
+        padding: 0px;  
+    }
+    .factParagraph {
+        margin-top: 20px;  
+        padding: 10px;  
+    }
 }
