Applied font consistency across the whole app - Changed default font sizing so it's a consistent size that's appropriate across 1024px and 1920px screen sizes - Changed the h4 to a p on the Safety Tips page so it matches the font size on the Home page - Added the theme font family to the graphs on the Stats page

--- a/src/component/SafetyTips.css
+++ b/src/component/SafetyTips.css
@@ -1,5 +1,5 @@
 /* Styling for the first two paragraphs on the page */
-.SafetyTips h4{
+.SafetyTips p {
     text-align: center;
     color: rgb(3, 48, 118);
     padding-right: 115px;
